// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      98,
      138,
      26,
      106,
      165,
      44,
      138,
      12,
      51,
      97,
      29,
      162,
      86,
      136,
      25,
      179,
      47,
      92,
      209,
      82,
      132,
      37,
      76,
      215,
      146,
      175,
      244,
      232,
      147,
      205,
      250,
      184,
      209,
      251,
      10,
      208,
      164,
      235,
      176,
      209,
      189,
      9,
      12,
      72,
      154,
      20,
      23,
      248,
      0,
      89,
      33,
      244,
      131,
      251,
      65,
      72,
      118,
      132,
      177,
      24,
      32,
      209,
      171,
      2,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "commandID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "commandID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      49,
      169,
      101,
      244,
      21,
      96,
      249,
      239,
      144,
      251,
      179,
      142,
      201,
      63,
      73,
      119,
      101,
      220,
      176,
      224,
      230,
      173,
      6,
      32,
      123,
      82,
      251,
      36,
      83,
      169,
      96,
      209,
      237,
      190,
      70,
      225,
      214,
      120,
      130,
      200,
      113,
      205,
      122,
      189,
      82,
      51,
      8,
      11,
      79,
      235,
      0,
      164,
      76,
      128,
      145,
      144,
      77,
      72,
      116,
      77,
      0,
      145,
      71,
      13,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      146,
      71,
      46,
      192,
      133,
      5,
      71,
      223,
      254,
      214,
      29,
      131,
      111,
      176,
      82,
      132,
      23,
      98,
      95,
      73,
      181,
      139,
      65,
      110,
      78,
      94,
      141,
      228,
      96,
      109,
      51,
      147,
      74,
      216,
      5,
      71,
      212,
      245,
      95,
      149,
      25,
      129,
      72,
      132,
      22,
      252,
      238,
      6,
      190,
      57,
      253,
      189,
      24,
      169,
      95,
      32,
      219,
      11,
      142,
      44,
      193,
      119,
      242,
      8,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      49,
      169,
      101,
      244,
      21,
      96,
      249,
      239,
      144,
      251,
      179,
      142,
      201,
      63,
      73,
      119,
      101,
      220,
      176,
      224,
      230,
      173,
      6,
      32,
      123,
      82,
      251,
      36,
      83,
      169,
      96,
      209,
      237,
      190,
      70,
      225,
      214,
      120,
      130,
      200,
      113,
      205,
      122,
      189,
      82,
      51,
      8,
      11,
      79,
      235,
      0,
      164,
      76,
      128,
      145,
      144,
      77,
      72,
      116,
      77,
      0,
      145,
      71,
      13,
    ],
    "type": "Buffer",
  },
]
`;
